# python-cyberiad

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
src/cyberiad/: __init__.py
src/cyberiad/pypi/: __init__.py
src/cyberiad/requirements/: __init__.py  parse.py
src/cyberiad/slack/: __init__.py  block_kit.py  client.py
